dev: added dom for home and legal

--- a/front/src/app/routes/legal/legal.component.html
+++ b/front/src/app/routes/legal/legal.component.html
@@ -1,1 +1,111 @@
-<p>legal works!</p>
+<main>
+  <h1>Mentions Légales</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quae
+    nemo eveniet et iste animi accusamus eos temporibus pariatur perferendis
+    quam quo libero ea, ratione tenetur amet nisi consequuntur voluptas!
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur libero
+    fugit deleniti nam veritatis vero, harum assumenda consectetur similique non
+    neque. Corporis ad rem iure eius! Aliquam, exercitationem vero, quis unde
+    sint praesentium hic cum dolores nostrum debitis animi. Cum asperiores ea,
+    hic aliquam libero illo nostrum dolorum, fugiat et, unde nesciunt aperiam
+    numquam culpa nam atque reiciendis sint laboriosam! Ex ad corrupti
+    reprehenderit architecto facere mollitia voluptas aperiam modi amet, eum
+    tempore, recusandae maiores id? Quasi, sapiente nulla quod alias officia
+    doloribus, magnam blanditiis cum optio, asperiores quidem soluta. Ea neque
+    dolorum ratione enim ab, obcaecati laudantium illo minima.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quae
+    nemo eveniet et iste animi accusamus eos temporibus pariatur perferendis
+    quam quo libero ea, ratione tenetur amet nisi consequuntur voluptas!
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur libero
+    fugit deleniti nam veritatis vero, harum assumenda consectetur similique non
+    neque. Corporis ad rem iure eius! Aliquam, exercitationem vero, quis unde
+    sint praesentium hic cum dolores nostrum debitis animi. Cum asperiores ea,
+    hic aliquam libero illo nostrum dolorum, fugiat et, unde nesciunt aperiam
+    numquam culpa nam atque reiciendis sint laboriosam! Ex ad corrupti
+    reprehenderit architecto facere mollitia voluptas aperiam modi amet, eum
+    tempore, recusandae maiores id? Quasi, sapiente nulla quod alias officia
+    doloribus, magnam blanditiis cum optio, asperiores quidem soluta. Ea neque
+    dolorum ratione enim ab, obcaecati laudantium illo minima.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quae
+    nemo eveniet et iste animi accusamus eos temporibus pariatur perferendis
+    quam quo libero ea, ratione tenetur amet nisi consequuntur voluptas!
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur libero
+    fugit deleniti nam veritatis vero, harum assumenda consectetur similique non
+    neque. Corporis ad rem iure eius! Aliquam, exercitationem vero, quis unde
+    sint praesentium hic cum dolores nostrum debitis animi. Cum asperiores ea,
+    hic aliquam libero illo nostrum dolorum, fugiat et, unde nesciunt aperiam
+    numquam culpa nam atque reiciendis sint laboriosam! Ex ad corrupti
+    reprehenderit architecto facere mollitia voluptas aperiam modi amet, eum
+    tempore, recusandae maiores id? Quasi, sapiente nulla quod alias officia
+    doloribus, magnam blanditiis cum optio, asperiores quidem soluta. Ea neque
+    dolorum ratione enim ab, obcaecati laudantium illo minima.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quae
+    nemo eveniet et iste animi accusamus eos temporibus pariatur perferendis
+    quam quo libero ea, ratione tenetur amet nisi consequuntur voluptas!
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur libero
+    fugit deleniti nam veritatis vero, harum assumenda consectetur similique non
+    neque. Corporis ad rem iure eius! Aliquam, exercitationem vero, quis unde
+    sint praesentium hic cum dolores nostrum debitis animi. Cum asperiores ea,
+    hic aliquam libero illo nostrum dolorum, fugiat et, unde nesciunt aperiam
+    numquam culpa nam atque reiciendis sint laboriosam! Ex ad corrupti
+    reprehenderit architecto facere mollitia voluptas aperiam modi amet, eum
+    tempore, recusandae maiores id? Quasi, sapiente nulla quod alias officia
+    doloribus, magnam blanditiis cum optio, asperiores quidem soluta. Ea neque
+    dolorum ratione enim ab, obcaecati laudantium illo minima.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quae
+    nemo eveniet et iste animi accusamus eos temporibus pariatur perferendis
+    quam quo libero ea, ratione tenetur amet nisi consequuntur voluptas!
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur libero
+    fugit deleniti nam veritatis vero, harum assumenda consectetur similique non
+    neque. Corporis ad rem iure eius! Aliquam, exercitationem vero, quis unde
+    sint praesentium hic cum dolores nostrum debitis animi. Cum asperiores ea,
+    hic aliquam libero illo nostrum dolorum, fugiat et, unde nesciunt aperiam
+    numquam culpa nam atque reiciendis sint laboriosam! Ex ad corrupti
+    reprehenderit architecto facere mollitia voluptas aperiam modi amet, eum
+    tempore, recusandae maiores id? Quasi, sapiente nulla quod alias officia
+    doloribus, magnam blanditiis cum optio, asperiores quidem soluta. Ea neque
+    dolorum ratione enim ab, obcaecati laudantium illo minima.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quae
+    nemo eveniet et iste animi accusamus eos temporibus pariatur perferendis
+    quam quo libero ea, ratione tenetur amet nisi consequuntur voluptas!
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur libero
+    fugit deleniti nam veritatis vero, harum assumenda consectetur similique non
+    neque. Corporis ad rem iure eius! Aliquam, exercitationem vero, quis unde
+    sint praesentium hic cum dolores nostrum debitis animi. Cum asperiores ea,
+    hic aliquam libero illo nostrum dolorum, fugiat et, unde nesciunt aperiam
+    numquam culpa nam atque reiciendis sint laboriosam! Ex ad corrupti
+    reprehenderit architecto facere mollitia voluptas aperiam modi amet, eum
+    tempore, recusandae maiores id? Quasi, sapiente nulla quod alias officia
+    doloribus, magnam blanditiis cum optio, asperiores quidem soluta. Ea neque
+    dolorum ratione enim ab, obcaecati laudantium illo minima.
+  </p>
+</main>
