dev: added css for legal

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -4,3 +4,17 @@ body {
   margin: 0;
   font-family: sans-serif;
 }
+
+main {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+
+  p {
+    width: 100%;
+  }
+
+  width: 100%;
+  max-width: 100ch;
+  margin: 0 auto;
+}
