dev: added box-sizing

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: sans-serif;
@@ -9,6 +13,8 @@ main {
   display: flex;
   flex-flow: column;
   align-items: center;
+
+  padding: 0.5em;
 
   p {
     width: 100%;
