dev: added btn decoration

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use "./scss/button.scss";
+
 * {
   box-sizing: border-box;
 }
@@ -13,6 +15,7 @@ main {
   display: flex;
   flex-flow: column;
   align-items: center;
+  gap: 0.5em;
 
   padding: 0.5em;
 
