dev: added stock dom

--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -1,1 +1,41 @@
-<p>stock works!</p>
+<main>
+  <h1>Liste des articles</h1>
+  <div class="content">
+    <nav>
+      <button>Rafraîchir</button>
+      <a href="#" class="button">Ajouter</a>
+      <button>Supprimer</button>
+    </nav>
+    <table>
+      <thead>
+        <tr>
+          <th class="name">Nom</th>
+          <th class="price">Prix</th>
+          <th class="qty">Quantité</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="name">Tournevis</td>
+          <td class="price">2.50 €</td>
+          <td class="qty">100</td>
+        </tr>
+        <tr>
+          <td class="name">Pelle</td>
+          <td class="price">4.20 €</td>
+          <td class="qty">45</td>
+        </tr>
+        <tr>
+          <td class="name">Marteau</td>
+          <td class="price">2.70 €</td>
+          <td class="qty">100</td>
+        </tr>
+        <tr>
+          <td class="name">Clé à mollette</td>
+          <td class="price">3.50 €</td>
+          <td class="qty">100</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</main>
