--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -3,7 +3,7 @@
   <div class="content">
     <nav>
       <button>Rafraîchir</button>
-      <a href="#" class="button">Ajouter</a>
+      <a routerLink="add" class="button">Ajouter</a>
       <button>Supprimer</button>
     </nav>
     <table>
