--- a/front/src/app/stock/add/add.component.html
+++ b/front/src/app/stock/add/add.component.html
@@ -13,6 +13,6 @@
       <span>Quantité</span>
       <input type="number" />
     </label>
-    <button>Ajouter</button>
+    <button class="primary">Ajouter</button>
   </form>
 </main>
