--- a/front/src/scss/button.scss
+++ b/front/src/scss/button.scss
@@ -3,6 +3,7 @@ a.button {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 0.5em;
   padding: 0.5em 1em;
   border: 0.1em solid #eee;
   border-radius: 0.3em;
