--- a/front/src/app/stock/stock.component.scss
+++ b/front/src/app/stock/stock.component.scss
@@ -40,3 +40,10 @@ div.content {
     }
   }
 }
+
+div.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+}
