--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -21,7 +21,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr *ngIf="(articleService.articles$ | async) === undefined">
           <td colspan="3">
             <div class="loading">
               <fa-icon [icon]="faCircleNotch" [spin]="true"></fa-icon>
