--- a/front/src/app/stock/add/add.component.html
+++ b/front/src/app/stock/add/add.component.html
@@ -13,7 +13,7 @@
       <span>Quantité</span>
       <input type="number" formControlName="qty" />
     </label>
-    <button class="primary">
+    <button class="primary" [disabled]="f.invalid">
       <fa-icon [icon]="faPlus"></fa-icon>
       <span>Ajouter</span>
     </button>
