--- a/front/src/app/stock/add/add.component.scss
+++ b/front/src/app/stock/add/add.component.scss
@@ -14,6 +14,11 @@ form {
       border: 0.1em solid #aaa;
       border-radius: 0.3em;
       padding: 0.5em 1em;
+
+      &.ng-invalid.ng-touched {
+        border-color: red;
+        outline-color: red;
+      }
     }
   }
 
