--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -29,7 +29,11 @@
             </div>
           </td>
         </tr>
-        <tr *ngFor="let a of articleService.articles$ | async">
+        <tr
+          *ngFor="let a of articleService.articles$ | async"
+          (click)="select(a)"
+          [class.selected]="selectedArticles.has(a)"
+        >
           <td class="name">{{ a.name }}</td>
           <td class="price">{{ a.price }} €</td>
           <td class="qty">{{ a.qty }}</td>
