--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -8,7 +8,7 @@
       <a routerLink="add" class="button" title="Ajouter">
         <fa-icon [icon]="faPlus"></fa-icon>
       </a>
-      <button title="Supprimer">
+      <button title="Supprimer" [hidden]="selectedArticles.size === 0">
         <fa-icon [icon]="faTrashCan"></fa-icon>
       </button>
     </nav>
