--- a/front/src/app/stock/stock.component.html
+++ b/front/src/app/stock/stock.component.html
@@ -38,7 +38,7 @@
           (click)="select(a)"
           [class.selected]="selectedArticles.has(a)"
         >
-          <td class="name">{{ a.name }}</td>
+          <td class="name">{{ a.name | ellipsis }}</td>
           <td class="price">{{ a.price }} €</td>
           <td class="qty">{{ a.qty }}</td>
         </tr>
